# thrift

./: .gitignore  IMPLEMENTATION_SUMMARY.md  appveyor.yml  test_comprehensive.sh  test_mustache_generator.sh  test_print_ostream.sh
.github/: CMAKE_WORKFLOW_DEBUG.md
build-test/: CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  ThriftConfig.cmake  cmake_install.cmake  compile_commands.json
build-test/compiler/cpp/: CTestTestfile.cmake  cmake_install.cmake
build-test/compiler/cpp/test/: CTestTestfile.cmake  cmake_install.cmake
build-test/compiler/cpp/tests/: CTestTestfile.cmake  cmake_install.cmake
build-test/thrift/: config.h
compiler/cpp/: CMakeLists.txt
compiler/cpp/src/thrift/generate/: t_cpp_generator.cc  t_mustache_generator.cc
compiler/cpp/tests/: CMakeLists.txt  thrift_test_globals.cc  thrift_test_parser_support.cc
compiler/cpp/tests/cpp/: CMakeLists.txt  t_cpp_generator_enum_class_tests.cc  t_cpp_generator_private_optional_tests.cc  test_forward_setter_usage.cpp
lib/php/src/ext/thrift_protocol/: php_thrift_protocol.dep
templates/: constants.cpp.mustache  constants.h.mustache  service.cpp.mustache  service.cpp.simple  service.h.mustache  types.cpp.mustache  types.h.mustache
test/: PrintOstreamTest.thrift  test_mustache_integration.sh
test/cpp/: CMakeLists.txt  Makefile.am  README_PRINT_OSTREAM.md
test/cpp/src/: EnumClassTest.cpp  ForwardSetterTest.cpp  PrintOstreamPerformanceTest.cpp  PrintOstreamTest.cpp  PrivateOptionalTest.cpp
